[package]
authors = ["Foresta"]
description = "Foresta DEX pallet"
edition = "2021"
license = "Unlicense"
name = "pallet-dex"
readme = "README.md"
version = "0.0.1"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
orml-traits = { workspace = true }
pallet-balances = { workspace = true }
orml-tokens = { workspace = true }
pallet-carbon-credits = { workspace = true }

# Local dependencies
pallet-assets = { workspace = true }
primitives  = { package = 'foresta-primitives', path = '../../primitives/frst_primitives/', default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"scale-info/std",
	"sp-std/std",
	"pallet-balances/std",
	"primitives/std",
	"orml-tokens/std",
	"pallet-carbon-credits/std",
	"log/std"
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]