[package]
name = "pallet-foresta-bounties"
version = "4.0.0-dev"
description = "The Foresta Bounties Pallet"
authors = ["Foresta"]
homepage = ""
edition = "2021"
license = "MIT"
publish = false
repository = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"], default-features = false }
frame-benchmarking = { workspace = true}
frame-support = { workspace = true}
frame-system = { workspace = true}
sp-std = { workspace = true}
sp-runtime = { workspace = true}
sp-core = { workspace = true}
pallet-balances = { workspace = true }
pallet-assets = { workspace = true }
pallet-membership = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-uniques = { workspace = true }
orml-traits = { workspace = true }
orml-tokens = { workspace = true }
pallet-carbon-credits = { workspace = true }
pallet-dex = { workspace = true }
pallet-kyc = {workspace = true}
primitives  = { package = 'foresta-primitives', path = '../../primitives/frst_primitives/', default-features = false }



[dev-dependencies]
sp-io = { workspace = true}

[features]
default = ["std"]
std = [
	"codec/std",
	"serde/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	'pallet-assets/std',
    'pallet-balances/std',
	'pallet-membership/std',
    'pallet-timestamp/std',
	'pallet-uniques/std',
	'sp-core/std',
	'sp-std/std',
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]