[package]
name = "foresta-primitives"
version = "0.0.1"
authors = ['Foresta <https://www.Foresta.org>']
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
frame-support = { workspace = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
cumulus-primitives-core = { workspace = true }

[features]
default = ["std"]
std = [
  "serde/std",
  "codec/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-std/std",
  "scale-info/std",
  "frame-support/std",
  "cumulus-primitives-core/std",
]
